Dependencies and Java version updated.