@@ -2,7 +2,6 @@ package it.units.erallab.builder.devofunction;
 
 import it.units.erallab.builder.PrototypedFunctionBuilder;
 import it.units.erallab.hmsrobots.core.objects.Robot;
-import it.units.erallab.hmsrobots.core.objects.SensingVoxel;
 import it.units.erallab.hmsrobots.core.objects.Voxel;
 import it.units.erallab.hmsrobots.util.Grid;
 import it.units.erallab.hmsrobots.util.SerializationUtils;
@@ -14,7 +13,7 @@ import java.util.function.Function;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
-public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFunctionBuilder<List<Double>, UnaryOperator<Robot<? extends SensingVoxel>>> {
+public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFunctionBuilder<List<Double>, UnaryOperator<Robot>> {
 
   private final Function<Voxel, Double> selectionFunction;
   private final boolean maxFirst;
@@ -33,24 +32,24 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
   }
 
   @Override
-  protected Grid<? extends SensingVoxel> createBody(Robot<? extends SensingVoxel> previous, Grid<Double> strengths, SensingVoxel voxelPrototype) {
-    Grid<SensingVoxel> body;
+  protected Grid<Voxel> createBody(Robot previous, Grid<Double> strengths, Voxel voxelPrototype) {
+    Grid<Voxel> body;
     if (previous == null) {
       Grid<Double> selected = Utils.gridConnected(strengths, Double::compareTo, nInitial);
       body = Grid.create(selected, v -> (v != null) ? SerializationUtils.clone(voxelPrototype) : null);
     } else {
       // sort voxels according to the given function
-      Grid<? extends SensingVoxel> previousBody = previous.getVoxels();
-      List<Grid.Entry<? extends SensingVoxel>> sortedVoxels = previousBody.stream()
-          .filter(e -> e.getValue() != null)
-          .sorted(Comparator.comparing(e -> selectionFunction.apply(e.getValue())))
+      Grid<Voxel> previousBody = previous.getVoxels();
+      List<Grid.Entry<Voxel>> sortedVoxels = previousBody.stream()
+          .filter(e -> e.value() != null)
+          .sorted(Comparator.comparing(e -> selectionFunction.apply(e.value())))
           .collect(Collectors.toList());
       if (maxFirst) {
         Collections.reverse(sortedVoxels);
       }
       List<Pair<Integer, Integer>> nextPositions = sortedVoxels.stream()
           .map(e -> getStrengthSortedEmptyNeighborsPositions(previousBody, e, strengths))
-          .flatMap(List::stream).collect(Collectors.toList());
+          .flatMap(List::stream).toList();
       body = Grid.create(previousBody, v -> (v != null) ? SerializationUtils.clone(voxelPrototype) : null);
       for (int i = 0; i < nStep; i++) {
         body.set(nextPositions.get(i).first(), nextPositions.get(i).second(), SerializationUtils.clone(voxelPrototype));
@@ -62,11 +61,11 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
     return body;
   }
 
-  private static <V> List<Pair<Integer, Integer>> getEmptyNeighborsPositions(Grid<? extends V> grid, Grid.Entry<? extends V> entry) {
+  private static List<Pair<Integer, Integer>> getEmptyNeighborsPositions(Grid<Voxel> grid, Grid.Entry<Voxel> entry) { // TODO should return Grid.Key
     List<Pair<Integer, Integer>> emptyNeighbors = new ArrayList<>();
     for (int d : new int[]{-1, 1}) {
-      int x = entry.getX();
-      int y = entry.getY();
+      int x = entry.key().x();
+      int y = entry.key().y();
       if ((x + d) >= 0 && (x + d) < grid.getW() && grid.get(x + d, y) == null) {
         emptyNeighbors.add(Pair.of(x + d, y));
       }
@@ -77,14 +76,14 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
     return emptyNeighbors;
   }
 
-  private static <V> List<Pair<Integer, Integer>> getStrengthSortedEmptyNeighborsPositions(Grid<? extends V> grid, Grid.Entry<? extends V> entry, Grid<Double> strengths) {
+  private static List<Pair<Integer, Integer>> getStrengthSortedEmptyNeighborsPositions(Grid<Voxel> grid, Grid.Entry<Voxel> entry, Grid<Double> strengths) { // TODO should return Grid.Key
     List<Pair<Integer, Integer>> emptyNeighbors = getEmptyNeighborsPositions(grid, entry);
     if (emptyNeighbors.isEmpty()) {
       return emptyNeighbors;
     }
     return strengths.stream()
-        .sorted(Comparator.comparingDouble(Grid.Entry::getValue))
-        .map(e -> Pair.of(e.getX(), e.getY()))
+        .sorted(Comparator.comparingDouble(Grid.Entry::value))
+        .map(e -> Pair.of(e.key().x(), e.key().y()))
         .filter(emptyNeighbors::contains)
         .collect(Collectors.toList());
   }
